# GenInt

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PATHWAY.md  README.md  SPEC.md  fly.toml  notes.md  pyproject.toml  render.yaml
docs/: cli.md  deploy.md  overview.md
docs/results/: benchmark_openai_agents.json  dataset_sample.jsonl  navigate_episodes.json
examples/: curriculum_warehouse.txt  kitchen_can.json  obstacle_course.json  prompts.txt  push_slide_demo.json  throw_vase_demo.json  vision_demo.json  warehouse_key.json
examples/example_world/: metrics.json  replay.json  scene.json
src/infinienv/: __init__.py  __main__.py  cli.py  setup_env.py
src/infinienv/artifacts/: report.py  writer.py
src/infinienv/engine/: env.py  (+18 more)
tests/: test_action_registry.py  test_agent_behavior.py  test_animation.py  test_assets.py  test_auditor.py  test_checklist.py  test_claude_runner.py  test_cli.py  test_compiler.py  test_curriculum.py  test_dataset_export.py  test_env.py  test_generator_diffusion.py  test_generator_openai.py  test_grid_collision.py  test_gui.py  test_interactions.py  test_level_generation.py  test_mechanics_cache.py  test_mock_generation.py  test_motion_patterns.py  test_mutation.py  test_pathfinding.py  test_perception.py  test_physics.py  test_platformer_physics.py  test_prompt_refiner.py  test_pushables.py  test_puzzle_state.py  test_reachability.py  test_rendering.py  test_replay_export.py  test_sandbox_runner.py  test_sandbox_workspace.py  test_schema.py  test_setup_env.py  test_solver.py  test_validator.py  test_vision.py  test_vision_play.py  (+2 more)
(+50 files in other folders)
