[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinienv"
version = "0.1.0"
description = "InfiniEnv: infinite environment generation via an agent harness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai-agents>=0.0.3", "openai>=1.30"]
anthropic = ["anthropic>=0.34"]
claude = ["claude-agent-sdk>=0.2"]
gui = ["flask>=3.0"]
physics = ["pymunk>=7.0"]
diffusion = ["torch>=2.0", "diffusers>=0.27", "transformers>=4.35", "rembg[cpu]>=2.0", "accelerate>=0.25"]
dev = ["pytest>=8.0"]

[project.scripts]
infinienv = "infinienv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
infinienv = ["schema/scene_schema.json", "llm/prompts/*.md", "assets/base/*.png", "gui/templates/*.html"]
